# ape-decoder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: decode.rs  decode_to_file.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_all.rs  decode_frame.rs  new_only.rs
scripts/: compress_stress_fixtures.sh  generate_stress_wavs.py  release.sh  verify_real_world.sh
src/: bitreader.rs  crc.rs  decoder.rs  entropy.rs  error.rs  format.rs  id3v2.rs  lib.rs  nn_filter.rs  predictor.rs  range_coder.rs  roll_buffer.rs  tag.rs  unprepare.rs
tests/: crc_validation.rs  integration_stress.rs
tests/fixtures/ape/: chirp_16s_c1000.ape  chirp_16s_c2000.ape  chirp_16s_c3000.ape  chirp_16s_c4000.ape  chirp_16s_c5000.ape  dc_offset_16s_c2000.ape  fade_16s_c1000.ape  fade_16s_c2000.ape  fade_16s_c3000.ape  fade_16s_c4000.ape  fade_16s_c5000.ape  identical_16s_c2000.ape  impulse_16s_c2000.ape  intermod_16s_c1000.ape  intermod_16s_c2000.ape  intermod_16s_c3000.ape  intermod_16s_c4000.ape  intermod_16s_c5000.ape  left_only_16s_c2000.ape  multiframe_16s_c2000.ape  multitone_16s_c1000.ape  multitone_16s_c2000.ape  multitone_16s_c3000.ape  multitone_16s_c4000.ape  multitone_16s_c5000.ape  noise_16s_c2000.ape  short_16s_c2000.ape  silence_16s_c2000.ape  sine_16m_c2000.ape  sine_16s_c1000.ape  sine_16s_c2000.ape  sine_16s_c4000.ape  sine_16s_c5000.ape  sine_24s_c2000.ape  sine_32s_c2000.ape  sine_8s_c2000.ape  square_16s_c1000.ape  square_16s_c2000.ape  square_16s_c3000.ape  square_16s_c4000.ape  (+6 more)
