[package]
name = "ape-decoder"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Pure Rust decoder for Monkey's Audio (APE) lossless audio files"
repository = "https://github.com/OMBS-IO/ape-decoder"
keywords = ["audio", "codec", "lossless", "ape", "monkey-audio"]
categories = ["multimedia::audio", "encoding"]
readme = "README.md"
include = ["src/**/*", "examples/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[dependencies]
crc32fast = "1"
md-5 = "0.10"

[package.metadata.docs.rs]
all-features = true
